objects/LLC_BI__Loan__c.object
<CustomObject>
    <fields>
        <fullName>Cash_Out_Refinance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag a loan as being used for Cash Out Refinance</description>
        <label>Cash Out Refinance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Good_Faith_Deduction_Amount__c</fullName>
        <label>Good Faith Deduction Amount</label>
        <summarizedField>LLC_BI__Fee__c.LLC_BI__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Fee__c.Deduct_from_Good_Faith_Deposit__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Fee__c.LLC_BI__Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Good_Faith_Deposit__c</fullName>
        <formula>LLC_BI__Fee_Loan_Aggregate__r.Good_Faith_Deposit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Good Faith Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outstanding_Good_Faith_Deposit__c</fullName>
        <formula>Good_Faith_Deposit__c - Good_Faith_Deduction_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Good Faith Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UBLOSDays_Since_Booking__c</fullName>
        <formula>TODAY() -  LLC_BI__Booked_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Booking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UBLOS_Doc_Prep_Status__c</fullName>
        <label>Doc Prep Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Information</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UBLOS_Doc_Prep_Type__c</fullName>
        <label>Doc Prep Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-house</fullName>
                </value>
                <value>
                    <fullName>Attorney Prepared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UBLOS_Hold_Reason_Description__c</fullName>
        <defaultValue>&apos;If placing loan on hold, describe the reason here&apos;</defaultValue>
        <label>Hold Reason Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UBLOS_Hold_Reason__c</fullName>
        <label>Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting on Client</fullName>
                </value>
                <value>
                    <fullName>Waiting on Party (Attorney)</fullName>
                </value>
                <value>
                    <fullName>Waiting on 3rd Party (Appraiser)</fullName>
                </value>
                <value>
                    <fullName>Waiting on 3rd Party (Other)</fullName>
                </value>
                <value>
                    <fullName>Waiting on Internal User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UBLOS_Loan_Booking_Status__c</fullName>
        <label>Loan Booking Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Booking</fullName>
                </value>
                <value>
                    <fullName>Ready for Verification</fullName>
                </value>
                <value>
                    <fullName>Errors Found</fullName>
                </value>
                <value>
                    <fullName>Verification Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UBLOS_Market__c</fullName>
        <formula>TEXT( Owner:User.UBLOS_Market__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UBLOS_Product_Code__c</fullName>
        <label>Product Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>122</fullName>
                </value>
                <value>
                    <fullName>130</fullName>
                </value>
                <value>
                    <fullName>135</fullName>
                </value>
                <value>
                    <fullName>CCC</fullName>
                </value>
                <value>
                    <fullName>CLR</fullName>
                </value>
                <value>
                    <fullName>CRN</fullName>
                </value>
                <value>
                    <fullName>CRR</fullName>
                </value>
                <value>
                    <fullName>FLD</fullName>
                </value>
                <value>
                    <fullName>GLC</fullName>
                </value>
                <value>
                    <fullName>ODP</fullName>
                </value>
                <value>
                    <fullName>SYN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UBLOS_Region__c</fullName>
        <formula>TEXT(Owner:User.UBLOS_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UBLOS_Revolving_Indicator__c</fullName>
        <label>Revolving Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Revolving</fullName>
                </value>
                <value>
                    <fullName>Non Revolving</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UBLOS_SBA_504__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SBA 504?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Stage_Booked</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>LLC_BI__Amount__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Product_Line__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__InterestRate__c</columns>
        <columns>LLC_BI__Risk_Grade__c</columns>
        <columns>LLC_BI__Stage__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Booked</value>
        </filters>
        <label>Stage = Booked</label>
    </listViews>
    <listViews>
        <fullName>Stage_Closing</fullName>
        <columns>UBLOS_Market__c</columns>
        <columns>UBLOS_Region__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>LLC_BI__Amount__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Closing</value>
        </filters>
        <filters>
            <field>LLC_BI__Product_Line__c</field>
            <operation>equals</operation>
            <value>Commercial Loan</value>
        </filters>
        <label>Stage = Closing</label>
    </listViews>
    <listViews>
        <fullName>Stage_Credit_Underwriting</fullName>
        <columns>UBLOS_Region__c</columns>
        <columns>UBLOS_Market__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>LLC_BI__Amount__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Credit Underwriting</value>
        </filters>
        <filters>
            <field>LLC_BI__Product_Line__c</field>
            <operation>equals</operation>
            <value>Commercial Loan</value>
        </filters>
        <label>Stage = Credit Underwriting</label>
    </listViews>
    <listViews>
        <fullName>Stage_Decisioning</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UBLOS_Market__c</columns>
        <columns>UBLOS_Region__c</columns>
        <columns>NAME</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>LLC_BI__Amount__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Decisioning</value>
        </filters>
        <filters>
            <field>LLC_BI__Product_Line__c</field>
            <operation>equals</operation>
            <value>Commercial Loan</value>
        </filters>
        <label>Stage = Decisioning</label>
    </listViews>
    <listViews>
        <fullName>Stage_Doc_Prep</fullName>
        <columns>UBLOS_Market__c</columns>
        <columns>UBLOS_Region__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UBLOS_Doc_Prep_Status__c</columns>
        <columns>UBLOS_Doc_Prep_Type__c</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>NAME</columns>
        <columns>LLC_BI__Amount__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Doc Prep</value>
        </filters>
        <filters>
            <field>LLC_BI__Product_Line__c</field>
            <operation>equals</operation>
            <value>Commercial Loan</value>
        </filters>
        <label>Stage = Doc Prep</label>
    </listViews>
    <listViews>
        <fullName>Stage_Processing</fullName>
        <columns>UBLOS_Region__c</columns>
        <columns>UBLOS_Market__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UBLOS_Doc_Prep_Status__c</columns>
        <columns>UBLOS_Doc_Prep_Type__c</columns>
        <columns>NAME</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>LLC_BI__Amount__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Processing</value>
        </filters>
        <filters>
            <field>LLC_BI__Product_Line__c</field>
            <operation>equals</operation>
            <value>Commercial Loan</value>
        </filters>
        <label>Stage = Processing</label>
    </listViews>
    <listViews>
        <fullName>Stage_Proposal</fullName>
        <columns>UBLOS_Region__c</columns>
        <columns>UBLOS_Market__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>LLC_BI__Amount__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Proposal</value>
        </filters>
        <filters>
            <field>LLC_BI__Product_Line__c</field>
            <operation>equals</operation>
            <value>Commercial Loan</value>
        </filters>
        <label>Stage = Proposal</label>
    </listViews>
    <listViews>
        <fullName>Stage_Qualification</fullName>
        <columns>UBLOS_Market__c</columns>
        <columns>UBLOS_Region__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>LLC_BI__Amount__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Qualification</value>
        </filters>
        <filters>
            <field>LLC_BI__Product_Line__c</field>
            <operation>equals</operation>
            <value>Commercial Loan</value>
        </filters>
        <label>Stage = Qualification</label>
    </listViews>
    <validationRules>
        <fullName>Loan_Validation_03</fullName>
        <active>false</active>
        <description>Ensure that Interest rate is not below the floor rate.</description>
        <errorConditionFormula>AND (
!ISNULL(LLC_BI__Rate_Floor__c),
(LLC_BI__InterestRate__c &lt; LLC_BI__Rate_Floor__c),
$User.No_Validation__c = False
)</errorConditionFormula>
        <errorDisplayField>LLC_BI__InterestRate__c</errorDisplayField>
        <errorMessage>Please ensure that the interest rate for this loan is not below the floor rate - LV03</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loan_Validation_04</fullName>
        <active>false</active>
        <description>Prevents Users from manually selecting the Approval / Loan Committee Stage.</description>
        <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED (LLC_BI__Stage__c)),
ISPICKVAL(LLC_BI__Stage__c, &quot;Approval / Loan Committee&quot;), TRUE)</errorConditionFormula>
        <errorDisplayField>LLC_BI__Stage__c</errorDisplayField>
        <errorMessage>You Cannot Manually Change the Loan Stage to Approval / Loan Committee. Please Ensure That All Information is Accurate and Press the &apos;Submit for Approval&apos; Button at the Top of the Page. - LV04</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loan_Validation_06</fullName>
        <active>false</active>
        <description>You Cannot Manually Change the Loan to a Post Approval Stage. The Loan Must be Approved by pressing the &apos;Submit for Approval&apos; Button at the top of the page.</description>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(LLC_BI__Stage__c , &apos;Processing&apos;),
ISPICKVAL(LLC_BI__Stage__c , &apos;Doc Prep&apos;),
ISPICKVAL(LLC_BI__Stage__c , &apos;Closing&apos;)),
ISBLANK(LLC_BI__Credit_Approval_Date__c),
$User.No_Validation__c = False)</errorConditionFormula>
        <errorDisplayField>LLC_BI__Stage__c</errorDisplayField>
        <errorMessage>You Cannot Manually Change the Loan to a Post Approval Stage. The Loan Must be Approved by pressing the &apos;Submit for Approval&apos; Button at the top of the page. - LV06</errorMessage>
    </validationRules>
</CustomObject>